--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /* navigation link */
@@ -62,7 +63,6 @@ h1, h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
-
     position: relative;
 }
 
@@ -108,4 +108,30 @@ h1, h2 {
 
     position: absolute;
 
+}
+
+/* club ethos */
+#club-ethos {
+    hight: 600px
+}
+#left-about{
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+
+}
+
+#right-about{
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: green;
+
+}
+#center-about{
+    padding-top: 30px;
+    width: 33%;
+    margin: 0 auto; 
+    background-color: silver;
 }
