--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,28 +112,30 @@ h1, h2 {
 
 /* club ethos */
 #club-ethos {
-    hight: 600px
+    height: 600px
 }
 #left-about{
     padding-top: 30px;
     width: 33%;
     float: left;
-    
+}
 
+#welcome{
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
 }
 
 #right-about{
     padding-top: 30px;
     width: 33%;
     float: right;
-    
 
 }
 #center-about{
     padding-top: 30px;
     width: 33%;
     margin: 0 auto; 
-    background-color: silver;
 }
 hr{
     border-top:1px solid #3a3a3a;
@@ -163,4 +165,21 @@ hr{
 }
 .right-about-heading p {
     text-align: right;
+}
+
+#circle-container{
+    width:300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #cccccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg{
+    background: url(../images/ethos-center-image.jpg) no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
